Project/objects/Apttus_Proposal__Proposal_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Penalty__c</fullName>
        <inlineHelpText>% per week</inlineHelpText>
        <label>Penalty</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Escalation_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Escalation Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit_of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Product_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Product Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Business_Unit__c</fullName>
        <label>Product Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_CID__c</fullName>
        <formula>Apttus_Proposal__Product__r.CID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product CID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Description__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by : Parag Sharma
Purpose : Replace field of Number with Same API as discussed with Izabela</description>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Quotation Line Items</relationshipLabel>
        <relationshipName>Quotation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Hierarchy_Code__c</fullName>
        <formula>Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Hierarchy_Information__c</fullName>
        <formula>If( APTS_Product_Is_Hierarchy__c= True, APTS_Hierarchy_Name__c &amp; BR() &amp; &apos;Hierarchy Code:&apos; &amp; CASE(Apttus_Proposal__Product__r.APTS_Hierarchy_Level__c,2, Apttus_Proposal__Product__r.APTS_LP_Product_Hierarchy__c,3,Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c,4, Apttus_Proposal__Product__r.APTS_Hierarchy_Level_4_Code__c,NULL), APTS_Product_Description__c &amp; BR() &amp; &apos;Hierarchy Code:&apos;&amp; Apttus_Proposal__Product__r.APTS_Hierarchy_Level_3_Code__c &amp; BR() &amp; &apos;Local Code:&apos; &amp; APTS_Local_Product_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product/Hierarchy Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Id__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Is_Hierarchy__c</fullName>
        <formula>Apttus_QPConfig__DerivedFromId__r.Apttus_Config2__ProductId__r.APTS_LP_Is_Hierarchy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Is Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Metrics__c</fullName>
        <label>Product Metrics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Style_No__c</fullName>
        <label>Product / Style No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_code_france__c</fullName>
        <formula>if(APTS_Product_Is_Hierarchy__c,right(APTS_Product_Id__c,5),APTS_Product_Id__c &amp; IF(Apttus_Proposal__Product__r.APTS_Alternate_Product_Code__c != NULL, &quot; / &quot;&amp;Apttus_Proposal__Product__r.APTS_Alternate_Product_Code__c,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product code france</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_is_GTV_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Product is GTV Product or not. Used for Template in Proposal Object (Roll-up Summary)</description>
        <label>Product is GTV Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Production_Cost__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Project_Management__c</fullName>
        <label>Project Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Proposed_Lead_Time__c</fullName>
        <label>Proposed Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Proposed_Off_Transfer_Price__c</fullName>
        <label>Proposed % Off Transfer Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Proposed_Transfer_Price__c</fullName>
        <label>Proposed Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quality_Control__c</fullName>
        <label>Quality Control</label>
        <picklist>
            <picklistValues>
                <fullName>No Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity_EUR__c</fullName>
        <formula>IF( 
APTS_Quantity__c &gt;= 1000000, 
TEXT(FLOOR(APTS_Quantity__c / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Quantity__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Quantity__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Quantity__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Quantity__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Quantity__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Quantity__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity* EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <formula>Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_External_Hyperlink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation External Hyperlink</label>
        <referenceTo>APTS_Quotation_External_Hyperlink__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Apttus_Proposal__Proposal__r.Id , IF( NOT( ISBLANK(Apttus_Proposal__Proposal__r.APTS_External_Revision__c) ) , 
Apttus_Proposal__Proposal__r.APTS_Quotation_Number_Internal__c + &quot;.&quot; + Apttus_Proposal__Proposal__r.APTS_External_Revision__c, 

Apttus_Proposal__Proposal__r.APTS_Quotation_Number_Internal__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Currency__c</fullName>
        <label>Quote Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line_Item_Gross_Margin__c</fullName>
        <label>Quote Line Item Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line_Item_Gross_Result__c</fullName>
        <label>Quote Line Item Gross Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line_Item_Net_Margin__c</fullName>
        <label>Quote Line Item Net Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line_Item_Net_Result__c</fullName>
        <label>Quote Line Item Net Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Total_Quote_Price_frm_Indirct__c</fullName>
        <label>Quote Total Quote Price (from Indirect)*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RDC_Gross_Margin__c</fullName>
        <label>RDC Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RDC_Gross_Result__c</fullName>
        <label>RDC Gross Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RDC_Net_Margin__c</fullName>
        <label>RDC Net Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RDC_Net_Result__c</fullName>
        <label>RDC Net Result</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RDC_Transfer_Price__c</fullName>
        <label>RDC Transfer Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Reason_for_Non_Closure__c</fullName>
        <label>Reason for Non-Closure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Rebates__c</fullName>
        <label>Rebates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Recommended_Sales_Price__c</fullName>
        <label>Recommended Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Recovery1__c</fullName>
        <label>Recovery1 (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Recovery2__c</fullName>
        <label>Recovery2 (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Delivery_Date_by_Customer__c</fullName>
        <label>Requested Delivery Date by Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Lead_Time__c</fullName>
        <label>Requested Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Off_Transfer_Price__c</fullName>
        <label>Requested % Off Transfer Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Transfer_Price__c</fullName>
        <label>Requested Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Risks__c</fullName>
        <label>Risks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Scale__c</fullName>
        <label>Scale</label>
        <picklist>
            <picklistValues>
                <fullName>No Scale (Not connected to Quantity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From (Connected to Quantity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To (Connected to Quantity)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Senior_Engineer__c</fullName>
        <label>Senior Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sensitive_Country_Protocol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sensitive Country Protocol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ServIS_Creator_Email__c</fullName>
        <label>ServIS Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APTS_ServIS_Opp_Id__c</fullName>
        <label>ServIS Opp Id</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ServIS_Response_Feedback__c</fullName>
        <label>ServIS Response Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ServiceLocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>Apttus_Config2__ServiceLocation__c</referenceTo>
        <relationshipLabel>Quotation Line Items</relationshipLabel>
        <relationshipName>Quotation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Shared_Margin_Model__c</fullName>
        <label>Shared Margin Model</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Shipping_Instruction__c</fullName>
        <label>Shipping Instruction</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Site_ID__c</fullName>
        <label>Site ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Site_Name__c</fullName>
        <label>Site Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Location</label>
        <referenceTo>APTS_Market_Allocation_Data__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Payment_Terms__c</fullName>
        <label>Special Payment Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Penalty_Terms__c</fullName>
        <label>Special Penalty Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Transfer_Price_Factory_Disc__c</fullName>
        <label>Special Transfer Price (Factory Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Warranty_Terms__c</fullName>
        <label>Special Warranty Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Split_Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount_Format__c</fullName>
        <formula>IF(APTS_LP_Standard_Discount__c &lt; 0.1, LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 4), LEFT(SUBSTITUTE(TEXT(APTS_LP_Standard_Discount__c * 100), &quot;.&quot;, &quot;,&quot;), 5))</formula>
        <label>Standard Discount Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discount__c</fullName>
        <inlineHelpText>Standard  Discount fetched from SAP.</inlineHelpText>
        <label>Standard Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Std_Disc_Account_Customer__c</fullName>
        <label>Std. Disc. (%) Account Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Std_Disc__c</fullName>
        <label>Std. Disc. (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Std_Net_Price_Account_Customer__c</fullName>
        <label>Std. Net Price Account Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Suggested_Order_Net_Price__c</fullName>
        <formula>APTS_Suggested_Order_Quantity__c *  APTS_Base_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Order Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Suggested_Order_Quantity__c</fullName>
        <formula>IF( MOD(APTS_Quantity__c, APTS_Min_Order_Qty__c )== 0 , APTS_Quantity__c , (FLOOR(APTS_Quantity__c/APTS_Min_Order_Qty__c)+1)*APTS_Min_Order_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Supply_Chain_Management_Inputs__c</fullName>
        <label>Supply Chain Management Inputs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Supply_Incoterm_Destination__c</fullName>
        <label>Supply Incoterm Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Supply_Incoterms__c</fullName>
        <label>Supply Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Supply_Payment_Terms__c</fullName>
        <label>Supply Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Amount__c</fullName>
        <label>Tax Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Type__c</fullName>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tax %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_amount_calculation__c</fullName>
        <formula>APTS_Net_Net_Price__c - APTS_Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>APTS_Technical_Details__c</fullName>
        <description>Created as part of STS-Release 7A : Quotation field alignment</description>
        <label>Technical Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_and_Conditions_Type__c</fullName>
        <label>Terms and Conditions Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Direct_Cost__c</fullName>
        <label>Total Direct Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Full_Cost__c</fullName>
        <label>Total Full Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Line_Item_Price_Direct_Custmr__c</fullName>
        <label>Total Line Item Price (Direct Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Line_Item_Price__c</fullName>
        <label>Total Line Item Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
   <fields>
        <fullName>APTS_Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>17</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Market_Price__c</fullName>
        <label>Total Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price_EUR__c</fullName>
        <formula>IF( 
APTS_Total_Net_Sales_Price__c &gt;= 1000000, 
TEXT(FLOOR(APTS_Total_Net_Sales_Price__c / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Total_Net_Sales_Price__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Total_Net_Sales_Price__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Total_Net_Sales_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Total_Net_Sales_Price__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Total_Net_Sales_Price__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Total_Net_Sales_Price__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Sales Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price__c</fullName>
        <label>Total Net Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Ownership_Cost__c</fullName>
        <inlineHelpText>CNY</inlineHelpText>
        <label>Total Ownership Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Quote_Price__c</fullName>
        <label>Total Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Recovery_for_Wholesaler__c</fullName>
        <label>Total Recovery for Wholesaler</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Standard_Price__c</fullName>
        <label>Total Standard Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Weight__c</fullName>
        <inlineHelpText>KG</inlineHelpText>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Curr_Conv_Rate_Overr__c</fullName>
        <label>Transfer Price Curr. Conv. Rate Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Currency_Conversion__c</fullName>
        <label>Transfer Price Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Currency__c</fullName>
        <label>Transfer Price Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Override__c</fullName>
        <label>Transfer Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Request_Type__c</fullName>
        <label>Transfer Price Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Transfer Price Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Off Transfer Price</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Net_Price_EUR__c</fullName>
        <formula>IF( 
APTS_Unit_Net_Price__c &gt;= 1000000, 
TEXT(FLOOR(APTS_Unit_Net_Price__c / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Unit_Net_Price__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Unit_Net_Price__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Unit_Net_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Unit_Net_Price__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Unit_Net_Price__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Unit_Net_Price__c , 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <label>Net Sales Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Package__c</fullName>
        <label>Unit of Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_VAT_Tax__c</fullName>
        <label>VAT Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_VAT__c</fullName>
        <label>VAT (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_WHS_Estimated_Price_with_Target__c</fullName>
        <label>WHS Estimated Price with Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty_Max__c</fullName>
        <label>Warranty Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Warranty__c</fullName>
        <label>Warranty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Weight_Without_Oil__c</fullName>
        <inlineHelpText>KG</inlineHelpText>
        <label>Weight Without Oil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Weight_in_KG__c</fullName>
        <label>Weight in KG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Whls_Price_with_Recov_1_Sell_in_Pri__c</fullName>
        <label>Whls. Price with Recov. 1 Sell in Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Whls_Price_with_Recovery_2__c</fullName>
        <label>Whls. Price with Recovery 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Winning_Price__c</fullName>
        <label>Winning Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_new_product_code__c</fullName>
        <inlineHelpText>Summary of the Product and Hierarchy information , for a given line item.</inlineHelpText>
        <label>Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>R3v1 - Its Used for CQP Integration</description>
        <label>Application</label>
        <picklist>
            <controllingField>APTS_Application_BU__c</controllingField>
            <picklistValues>
                <fullName>AP.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>